GNOME Bugzilla – Bug 666221
In busy mode, incoming calls ring but do not notify, cannot be taken
Last modified: 2013-08-19 12:16:40 UTC
If you set the Shell to busy mode (no notifications) and someone tries to call you (tested with an SIP call through Empathy), you will hear the ringing sound but will not be able to see the notifications (and thus you cannot click the Answer button). I'm a bit unsure of what would be the expected behavior: - Mute the call? After all, busy means busy... - Show the notification without the sound? - Show the notification and let the sound be heard? After all, one might argue that an incoming call is typically an urgent event, compared to email or IM.
Actually Empathy (the contact list) is the one making the rining sound. This should probably be the Shell so it rings even if empathy isn't running. Anyway that's another issue. I agree that the current behaviour isn't great. If we don't provide any feedback to the user (notification, sound) the shell should reject the call right away with the busy reason. But that's up to a designer to choice what we should do.
It would be problematic to set a mode where the user can be called but will not be notified of incoming calls. "Busy" is one of several IM statuses, which might be about expressing a preference to contacts ("I am busy, so please don't bother me for unimportant stuff"). If you don't want to be called at all, it would be better to set your status to "Invisible" or "Offline" rather than deliberately missing every call (very rude IMHO). Regarding other notifications, maybe more fine-tuning would be preferable to fixed modes, specially if the interface does not clearly communicate what is being hidden in each case. For instance, I would prefer to be able to disable email notifications but keep IM ones at all times; other people's workflows might demand other settings.
I agree with Guillaume, if the busy status really mean "Do not disturb", gnome-shell should reject all calls automatically. otoh, I personally don't like the concept of busy in that way, better be offline then...
We should consider marking the notification for incoming calls as critical, so it'd be shown regardless the session status. If I remember correctly, ongoing call notifications reuse the notification for incoming calls, which is problematic then (as notifications for ongoing calls should not be critical, not least as it would block any other critical notifications ("low battery") for the duration of the call)
ongoing call notification never got merged, tbh.
See also: bug #676998
*** Bug 600747 has been marked as a duplicate of this bug. ***
bug 676998 comment 4 applies to this bug in part
What Skype does is show a notification but don't ring. I think that's a sensible thing to do.
Created attachment 252203 [details] [review] Mark call notifications as critical So that we are notified about incoming calls even while busy. https://bugzilla.gnome.org/show_bug.cgi?id=666221 Signed-off-by: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>
Created attachment 252204 [details] [review] Do not ring on incoming calls when busy Signed-off-by: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>
Review of attachment 252203 [details] [review]: I think this makes sense, after all this is what other devices do for calls.
Btw, you should consider switching your sound handling to gnome-shell, we support the sound hints from the notification spec now (and the user can configure them in the control center)
Review of attachment 252204 [details] [review]: ++
Comment on attachment 252204 [details] [review] Do not ring on incoming calls when busy Attachment 252204 [details] pushed as d354e17 - Do not ring on incoming calls when busy
Attachment 252203 [details] pushed as 6d317d3 - Mark call notifications as critical
(In reply to comment #13) > Btw, you should consider switching your sound handling to gnome-shell, we > support the sound hints from the notification spec now (and the user can > configure them in the control center) Reported as bug #706299.