Do not ring on incoming calls when busy

Signed-off-by: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>

https://bugzilla.gnome.org/show_bug.cgi?id=666221